--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,51 @@
-build/
-/dist/
-/build-*/
-/build_*/
-/release-*/
+# Dependencies
+node_modules/
+.pnp
+.pnp.js
+
+# Build outputs
+dist/
+dist-ssr/
+*.local
+target/
+
+# IDE
+.vscode/*
+!.vscode/extensions.json
 .idea/
-.gradle/
-/x/
-local.properties
-/scrcpy-server
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Environment
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Tauri
+src-tauri/target/
+src-tauri/WixTools/
+src-tauri/icons/*.png
+src-tauri/icons/*.ico
+src-tauri/icons/*.icns
+
+# TypeScript
+*.tsbuildinfo
+
+# Testing
+coverage/
